# blockchain-rs

./: .gitignore  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/core/: block.rs
backend/src/routes/: add_blocks.rs  get_blocks.rs  mod.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/: main.rs
src/core/: block.rs  chain.rs
src/routes/: get_blocks.rs
